RGB Curves Film Like option in Shader Editor is also just Standard #84389

Closed
opened 2021-01-04 23:02:42 +01:00 by Jonathan Lampel · 6 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 432.00

Blender Version
Broken: version: 2.91.0, branch: master, commit date: 2020-11-25 08:34, hash: 0f45cab862
Worked: Not sure

Short description of error
The Film Like setting in the shader editor's RGB curves does not use the Film Like curves like the compositor and appears to not change anything at all.

Exact steps for others to reproduce the error

  • Switch to Film Like in the shader editor's RGB Curves
  • Add an extreme curve to see where there should be a difference

Here's what it looks like in the compositor:
DPA9tfqmyE.gif

And what the same image looks like in the shader editor:
oJtV24P0bN.gif

If it's not supported, then it would be good to just remove the option to avoid confusion.

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 432.00 **Blender Version** Broken: version: 2.91.0, branch: master, commit date: 2020-11-25 08:34, hash: `0f45cab862` Worked: Not sure **Short description of error** The Film Like setting in the shader editor's RGB curves does not use the Film Like curves like the compositor and appears to not change anything at all. **Exact steps for others to reproduce the error** - Switch to Film Like in the shader editor's RGB Curves - Add an extreme curve to see where there should be a difference Here's what it looks like in the compositor: ![DPA9tfqmyE.gif](https://archive.blender.org/developer/F9550772/DPA9tfqmyE.gif) And what the same image looks like in the shader editor: ![oJtV24P0bN.gif](https://archive.blender.org/developer/F9550777/oJtV24P0bN.gif) If it's not supported, then it would be good to just remove the option to avoid confusion.

Added subscriber: @JonathanLampel-4

Added subscriber: @JonathanLampel-4
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2021-01-05 16:06:23 +01:00
Member

Can confirm.

Introduced in 4de7c0c310 (controversial anyways), it looks like this is only supported in the Compositor, will remove the option for shading nodes.

Can confirm. Introduced in 4de7c0c310 (controversial anyways), it looks like this is only supported in the Compositor, will remove the option for shading nodes.

This issue was referenced by da9d471e1d

This issue was referenced by da9d471e1d9ac451929340cfe8aa5a8c5b268a75
Member

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'

Awesome, thanks!

Awesome, thanks!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#84389
No description provided.